--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -3,6 +3,11 @@ WORKDIR /app
 COPY --chown=node:node package.json ./
 RUN npm install
 COPY --chown=node:node . .
-RUN chmod 777 /app/node_modules
-USER node
-CMD ["npm", "start"]
+# RUN chmod 777 /app/node_modules
+RUN npm run build
+
+FROM nginx:alpine
+EXPOSE 3000
+USER root
+COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
+COPY --from=build /app/build /usr/share/nginx/html
