--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mongoose": "^6.8.4",
     "nodemon": "^2.0.20",
     "openai": "^3.1.0",
     "pg": "^8.8.0"
