--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_USER='postgres'
+DB_USER='benjamin'
 DB_HOST='127.0.0.1'
-DB_NAME='postgres'
-DB_PASSWORD='postgres'
+DB_NAME='benjamin'
+DB_PASSWORD='benjamin'
 DB_PORT=5432
